--- a/ui/html/runkt.page.html
+++ b/ui/html/runkt.page.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-2"></div>
   <div class="col-sm-6">
-	  
+
 <p>You are running at:</p>
 <p>Sending speed of {{.Speed}} WPM</p>
 <p>With Farnsworth charachter speed of {{.FarnSpeed}} WPM</p>
@@ -15,7 +15,7 @@
 <p>Word spacing is {{.Wsm}} times 7 dots</p>
 <p>And your operating mode is {{.Mode}}</p>
 <br><br>
-<a class="btn btn-primary" href="/stop" role="button">Stop</a>
+<a style="background-color: #9FE1EA; color: #442C2E" class="btn" href="/stop" role="button">Stop</a>
 
 </div>
 </div>
