--- a/ui/html/ktutor.page.html
+++ b/ui/html/ktutor.page.html
@@ -7,16 +7,16 @@
 <div class="row">
   <div class="col-sm-2"></div>
   <div class="col-sm-6">
-   
+
 <h3>Code Tutor and Keyer</h3>
-<p>This is a combinatin of cw totor and a keyer.  
+<p>This is a combinatin of cw totor and a keyer.
 I hope it helps you with CW and make code enjoyable.
 The keyer is for rigs that don't have a keyer built in but
 do generate side tone</p>
 <p>Dit, dah, and spacing times are calculated based on the data entered
 in the speed and Farnsworth speed fields according to this paper:
-http://www.arrl.org/files/file/Technology/x9004008.pdf.  Letter 
-(3 dit lengths) and word (7 dit lengths) spacings as defined 
+http://www.arrl.org/files/file/Technology/x9004008.pdf.  Letter
+(3 dit lengths) and word (7 dit lengths) spacings as defined
 by the Farnsworth algorithm and are stretched by the factors you
 specify. Experiment to see what is comfortable for you.</p>
 
@@ -28,7 +28,7 @@ specify. Experiment to see what is comfortable for you.</p>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3">Example: {{.Speed}}</span>
-  <input type="text" class="form-control" id="basic-url" 
+  <input type="text" class="form-control" id="basic-url"
   name="speed" aria-describedby="basic-addon3" value='{{.FormData.Get "speed"}}'>
 </div>
 
@@ -38,7 +38,7 @@ specify. Experiment to see what is comfortable for you.</p>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3">Example: {{.FarnSpeed}}</span>
-  <input type="text" class="form-control" id="basic-url" name="farnspeed" 
+  <input type="text" class="form-control" id="basic-url" name="farnspeed"
   value='{{.FormData.Get "farnspeed"}}' aria-describedby="basic-addon3">
 </div>
 
@@ -48,7 +48,7 @@ specify. Experiment to see what is comfortable for you.</p>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3">Example: {{.Lsm}}</span>
-  <input type="text" class="form-control" id="basic-url" name="lsm" 
+  <input type="text" class="form-control" id="basic-url" name="lsm"
   value='{{.FormData.Get "lsm"}}' aria-describedby="basic-addon3">
 </div>
 
@@ -58,13 +58,13 @@ specify. Experiment to see what is comfortable for you.</p>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3" >Example: {{.Wsm}}</span>
-  <input type="text" class="form-control" id="basic-url" name="wsm" 
+  <input type="text" class="form-control" id="basic-url" name="wsm"
   value='{{.FormData.Get "wsm"}}' aria-describedby="basic-addon3">
 </div>
 
 {{with .FormData.Errors.Get "mode"}}
 		<label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label><br>
-{{end}}	
+{{end}}
 
 <select class="form-select" aria-label="Choices" name="mode">
   <option selected>Select operating mode</option>
@@ -73,15 +73,14 @@ specify. Experiment to see what is comfortable for you.</p>
 </select>
 <br><br>
 
-  <button type="submit" class="btn btn-primary">Start</button>
+  <button type="submit" style="background-color: #9FE1EA; color: #442C2E" class="btn ">Start</button>
   {{with .FormData.Errors.Get "ktrunning"}}
 		<label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label><br>
 	{{end}}
-	
+
 	{{end}}
-	
+
 </form>
 </div>
 </div>
 <br><br>
-
