--- a/ui/html/ant.page.html
+++ b/ui/html/ant.page.html
@@ -5,7 +5,20 @@
 
 {{define "main"}}
 
-<h4>Station Master Project</h4>
-<p>I hope to improve on the antenna tunning by better algorithms</p>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
+		<p>I hope to improve on the antenna tunning by better algorithms</p>
+		<p>Key up and key down is it for now</p>
+		<div class="row">
+			<div class="col-sm-3">
+				<a class="btn btn-primary" href="/keydown" role="button">Key Down</a>
+			</div>
+			<div class="col-sm-3">
+				<a class="btn btn-primary" href="/keyup" role="button">Key Up</a>
+			</div>
+		</div>
+	</div>
+</div>
 
 {{end}}
