starting to write the test suite, need to refactor the database interface first.

--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -130,8 +130,9 @@ $(document).ready(function(){
     $("#qrzname").text(data["Name"])
     $("#born").text(data["Born"])
     $("#addr1").text(data["Addr1"])
-    $("#addr2").text(data["Addr2"])
-    $("#qrzcountry").text(data["QRZCountry"])
+    // $("#addr2").text(data["Addr2"])
+    // $("#qrzcountry").text(data["QRZCountry"])
+    $("#geolocation").text(data["GeoLoc"])
     $("#class").text(data["Class"])
     $("#timezone").text(data["TimeZone"])
     $("#qsocount").text(data["QSOCount"])
