--- a/ui/html/log.page.html
+++ b/ui/html/log.page.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 <hr>
-<table class="table table-sm">
+<table class="table table-borderless table-sm">
   <thead>
     <tr>
       {{with .Top}}
@@ -199,8 +199,9 @@
         <p id="qrzname">name</p>
         <p id="born">born</p>
         <p id="addr1">addr1</p>
-        <p id="addr2">addr2</p>
-        <p id="qrzcountry">country</p>
+        <!-- <p id="addr2">addr2</p> -->
+        <!-- <p id="qrzcountry">country</p> -->
+        <p id="geolocation">geo</p>
         <p id="class">class</p>
         <p id="timezone">timezone</p>
         <p id="qsocount">qsocount</p>
