--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -67,6 +67,10 @@ p, h3, h4, h5, th, td, input {
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" style="color: white" href="/adif">ADIF</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" style="color: white" href="/ant">Antenna</a>
         </li>
         <li class="nav-item">
