--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -61,6 +61,9 @@ p, h3, h4, h5, th, td, input {
 
 
         {{end}}
+        <li class="nav-item">
+          <a class="nav-link" style="color: white" href="/analysis">Analysis</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" style="color: white" href="/defaults">Defaults</a>
