added more analysis functionality

--- a/ui/html/analysis.page.html
+++ b/ui/html/analysis.page.html
@@ -10,6 +10,9 @@
 <h3>Select from one of these options:</h3>
     <ul>
       <li><a style="color: #442C2E" href="/country">Country</a></li>
+      <li><a style="color: #442C2E" href="/country-confirmed">Confirmed country</a></li>
+      <li><a style="color: #442C2E" href="/county">County</a></li>
+      <li><a style="color: #442C2E" href="/county-confirmed">Confirmed county</a></li>
       <li><a style="color: #442C2E" href="/repeat">Repeat Contacts</a></li>
     </ul>
 </div>
