--- a/ui/html/defaults.page.html
+++ b/ui/html/defaults.page.html
@@ -12,23 +12,30 @@
 {{with .LogEdit}}
 <p>Current default mode is: {{.Mode}}</p>
 <p>Current default band is: {{.Band}}</p>
+<p>Contest mode is set to: {{.Contest}}</p>
+<p>Contest name is set to: {{.ContestName}}</p>
+<p>Sent RST is set to: {{.Sent}}</p>
+<p>Sent exchange is set to: {{.ExchSent}}</p>
 {{end}}
 <p>Change the defaults below</p>
 </div>
 
 <div class="row">
   <div class="col-sm-2"></div>
-<div class="col-sm-2">
+<div class="col-sm-8">
 
 <form action="/store-defaults" method="post">
-
+<div class="col-sm-5">
+  <div class="row">
 <select class="form-select" aria-label="Modes" name="mode">
   <option selected>Select operating mode</option>
   <option value="1">USB</option>
   <option value="2">LSB</option>
   <option value="3">CW</option>
 </select>
+</div>
 <br>
+<div class="row">
 <select class="form-select" aria-label="Bands" name="band">
   <option selected>Select operating band</option>
   <option value="1">10m</option>
@@ -37,10 +44,49 @@
   <option value="4">80m</option>
   <option value="5">160m</option>
 </select>
+</div>
 <br>
+<div class="row">
+<select class="form-select" aria-label="Contest" name="contest">
+  <option selected>Select contest mode</option>
+  <option value="1">Yes</option>
+  <option value="2">No</option>
+</select>
+</div>
+</div>
+<br>
+<div class="row">
+  <div class="col-sm-2">
+  <p>Contest name</p>
+  </div>
+  <div class="col-sm-6">
+    <input type="text" id="contestName" name="contestname">
+    </div>
+    </div>
+<div class="row">
+  <div class="col-sm-2">
+  <p>Contest RS(T)</p>
+  </div>
+  <div class="col-sm-6">
+    <input type="text" id="contestRST" name="rst">
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2">
+  <p>Contest Exch</p>
+  </div>
+  <div class="col-sm-6">
+    <input type="text" id="contestExch" name="exch">
+    </div>
+    </div>
+  <br>
+  <div class="col-sm-5">
+  <div class="row">
   <button type="submit" style="background-color: #9FE1EA; color: #442C2E" class="btn">Submit</button>
-
+</div>
+</div>
 </form>
+</div>
 </div>
 </div>
 </div>
