Exception and error handling and bug fixes as listed below: 1. Built excption handling for the default page 2. Built error handling and user feedback on the default page 3. Fixed bug in the qrz.com api for the case of expired session key 4. Fixed bug so contest data is only prepopulated in contst mode 5. Fixed bug so after adding a log during contest, the contest data continues to prepopulate 6. Added a contest directory to the config.yaml file and updated the handler to process it.

--- a/ui/html/cabrillo.page.html
+++ b/ui/html/cabrillo.page.html
@@ -21,6 +21,16 @@
             <input type="text" name="contestname" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
         </div>
+        <div class="col-sm-6">
+          {{with .FormData.Errors.Get "contestfile"}}
+              <label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
+            {{end}}
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Contest File Name</span>
+            <input type="text" name="contestfile" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+        </div>
+
 
         </div>
 
@@ -55,7 +65,7 @@
             		<label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
             	{{end}}
           <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">End Date (yyyy-mm-dd)</span>
+            <span class="input-group-text" id="inputGroup-sizing-default">End Date (yyyy-mm-dd)   </span>
             <input type="text" name="enddate" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
           </div>
