--- a/ui/html/log.page.html
+++ b/ui/html/log.page.html
@@ -133,7 +133,7 @@
 </div>
 
 <label for="exchsent" class="form-label">Exch sent</label>
-{{with .FormData.Errors.Get "eschsent"}}
+{{with .FormData.Errors.Get "exchsent"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
 <div class="input-group mb-3">
