--- a/ui/html/analysis.page.html
+++ b/ui/html/analysis.page.html
@@ -8,13 +8,22 @@
   <div class="col-sm-2"></div>
   <div class="col-sm-8">
 <h3>Select from one of these options:</h3>
-    <ul>
-      <li><a style="color: #442C2E" href="/country">Country</a></li>
-      <li><a style="color: #442C2E" href="/country-confirmed">Confirmed country</a></li>
-      <li><a style="color: #442C2E" href="/county">County</a></li>
-      <li><a style="color: #442C2E" href="/county-confirmed">Confirmed county</a></li>
-      <li><a style="color: #442C2E" href="/repeat">Repeat Contacts</a></li>
-    </ul>
+
+{{with .Stats}}
+<ul>
+  <li><a style="color: #442C2E" href="/qsolog">Contacts: {{.Contacts}}</a></li>
+  <li><a style="color: #442C2E" href="/contacts-confirmed">Confrimed Contacts: {{.ConfirmedContacts}}</a></li>
+  <li><a style="color: #442C2E" href="/repeat">Repeat Contacts: {{.RepeatContacts}}</a></li>
+  <li><a style="color: #442C2E" href="/country">Country: {{.Country}}</a></li>
+  <li><a style="color: #442C2E" href="/country-confirmed">Confirmed Country: {{.ConfirmedCountry}}</a></li>
+  <li><a style="color: #442C2E" href="/state">State: {{.State}}</a></li>
+  <li><a style="color: #442C2E" href="/state-confirmed">Confirmed State: {{.ConfirmedState}}</a></li>
+  <li><a style="color: #442C2E" href="/county">County: {{.County}}</a></li>
+  <li><a style="color: #442C2E" href="/county-confirmed">Confirmed County: {{.ConfirmedCounty}}</a></li>
+
+</ul>
+{{end}}
+
 </div>
 </div>
 
