--- a/ui/html/cabrillo.page.html
+++ b/ui/html/cabrillo.page.html
@@ -103,7 +103,7 @@
     	<th scope="col">{{.Rcvd}}</th>
     	<th scope="col">{{.Name}}</th>
     	<th scope="col">{{.Country}}</th>
-      <th scope="col">{{.Comment}}</th>
+      <!-- <th scope="col">{{.Comment}}</th> -->
       <th scope="col">{{.ExchSent}}</th>
       <th scope="col">{{.ExchRcvd}}</th>
     </tr>
@@ -121,7 +121,7 @@
     	<td scope="col">{{.Rcvd}}</td>
     	<td scope="col">{{.Name}}</td>
     	<td scope="col">{{.Country}}</td>
-      <td scope="col">{{.Comment}}</td>
+      <!-- <td scope="col">{{.Comment}}</td> -->
       <td scope="col">{{.ExchSent}}</td>
       <td scope="col">{{.ExchRcvd}}</td>
     </tr>
