--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -140,9 +140,20 @@ $(document).ready(function(){
   if (title == "VFO Control"){
     var bander = new Worker("/static/js/bander.js")
     bander.onmessage = function(reply){
-    $("#test").html(reply.data);
+        $("#test").html(reply.data);
     };
+    
   }
+  
+  
+setInterval(function(){
+    var band = $("#band").html()
+    var testBand = $("#test").html()
+    if (!(band.includes(testBand))) {
+      window.location = "http://localhost:4000/start-vfo";
+ //     load()
+    };
+}, 1000)
 
   $("#search-button").click(function() {
     $.getJSON("/callsearch?call="+$("#search-call").val())
