--- a/ui/html/vfo.page.html
+++ b/ui/html/vfo.page.html
@@ -10,21 +10,48 @@
   <p class="visually-hidden", id="upper-limit">{{.UpperLimit}}</p>
   <p class="visually-hidden", id="lower-limit">{{.LowerLimit}}</p>
   <p class="visually-hidden", id="cw-boundary">{{.CWBoundary}}</p>
-  <div class="col-sm-1"></div>
-  <div class="col-sm-4">
+  <div class="col-sm-5">
+  <h2 id="dx">DX Clusters</h2>
+  </div>
+  <div class="col-sm-3">
     <h2 id="band">Band: {{.Band}}</h2>
     <p class="visually-hidden", id="test"></p>
   </div>
   <div class="col-sm-1"></div>
-  <div class="col-sm-4">
+  <div class="col-sm-3">
     <h2 id='mode'>Mode: {{.Mode}}</h2>
   </div>
   <div class="col-sm-3"></div>
 </div>
 <br>
+
 <div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-4">
+  <div class="col-sm-5">
+    
+    <table class="table table-borderless table-sm">
+  <thead>
+    <tr>
+      <th scope="col">DE</th>
+      <th scope="col">DX</th>
+      <th scope="col">Country</th>
+    	<th scope="col">Freq.</th>
+      <th scope="col">Need</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{range $n, $value := .DX}}
+    <tr>
+      <td scope="col" id="de{{$n}}">{{.DE}}</td>
+    	<td scope="col" id="dx{{$n}}">{{.DXStation}}</td>
+      <td scope="col" id="country{{$n}}">{{.Country}}</td>
+    	<td scope="col" id="frequency{{$n}}">{{.Frequency}}</td>
+      <td scope="col" id="need{{$n}}">{{.Need}}</td>
+    </tr>
+    {{end}}
+  </tbody>
+</table>
+  </div>
+  <div class="col-sm-3">
     <h2 id="rcv">Rceive: {{.RFreq}}</h2>
     <div class="row">
       <div class="col-sm-6">
@@ -121,7 +148,7 @@
 <div class="row"><button type="button" class="btn mb-3" style="background-color: #FEDBD0">10 Hz</button></div>
 <div class="row"><button type="button" class="btn mb-3" style="background-color: #FEDBD0">1 Hz</button></div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-3">
     <h2 id="xmt">Transmit: {{.XFreq}}</h2>
     <div class="row">
       <div class="col-sm-6">
