moved to 64 bit os, fixed bug in bandupdate blocked channel

--- a/ui/html/defaults.page.html
+++ b/ui/html/defaults.page.html
@@ -32,6 +32,7 @@
   <option value="1">USB</option>
   <option value="2">LSB</option>
   <option value="3">CW</option>
+  <option value="4">FT8</option>
 </select>
 </div>
 <br>
