--- a/ui/html/defaults.page.html
+++ b/ui/html/defaults.page.html
@@ -33,6 +33,7 @@
   <option value="2">LSB</option>
   <option value="3">CW</option>
   <option value="4">FT8</option>
+  <option value="5">FT4</option>
 </select>
 </div>
 <br>
