--- a/ui/html/vfo.page.html
+++ b/ui/html/vfo.page.html
@@ -10,6 +10,8 @@
   <p class="visually-hidden", id="upper-limit">{{.UpperLimit}}</p>
   <p class="visually-hidden", id="lower-limit">{{.LowerLimit}}</p>
   <p class="visually-hidden", id="cw-boundary">{{.CWBoundary}}</p>
+  <p class="visually-hidden", id="ft8-frequency">{{.FT8Freq}}</p>
+  <p class="visually-hidden", id="ft4-frequency">{{.FT4Freq}}</p>
   <div class="col-sm-5">
   <h2 id="dx">DX Clusters</h2>
   </div>
