--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -327,6 +327,53 @@ $("#toggle-split").click(function(){
   }
 });
 
+if (title == "VFO Control"){
+  var rcvSlider = document.getElementById("rcv-range");
+  var oldRcvVal = 0;
+  rcvSlider.oninput = function() {
+    var split = $("#split").html();
+    var s = $("#rcv").html();
+    var x = s.split(": ");
+    var newRcvVal = Number(this.value)-oldRcvVal;
+    oldRcvVal = this.value;
+    x[1] = (1000000*Number(x[1]) + newRcvVal)/1000000;
+    x[1] = checkLimit(x[1])
+    x[1] = normalize(x[1])
+    s =x[0] + ": " + String(x[1]);
+    
+    $("#rcv").html(s);
+    if (split == "Split: Off") {
+      s = "Tramsmit: " + String(x[1]);
+      $("#xmt").html(s);
+    }
+    updateVFO()
+  };
+  
+};
+
+//if (title == "VFO Control"){
+  ////var xmtSlider = $("#xmt-range") //document.getElementByID("xmt-range");
+  //var oldXmtVal = 0;
+    //$("#xmt-range").on("slidechange", function(event, ui) {
+    //alert("called")
+    //var split = $("#split").html();
+    //if (split == "Split: Off") {
+      //return
+    //}
+    //alert("passed go")
+    //var s = $("#xmt").html();
+    //var x = s.split(": ");
+    //var newXmtVal = Number(this.value)-oldXmtVal;
+    //oldXmtVal = this.value;
+    //x[1] = (1000000*Number(x[1]) + newXmtVal)/1000000;
+    //x[1] = checkLimit(x[1])
+    //x[1] = normalize(x[1])
+    //s =x[0] + ": " + String(x[1]);
+    //$("#xmt").html(s);
+    //updateVFO()
+  //});
+//};
+
 function handleRcv(s, u, d){ //s strring, u increment d direction
   var split = $("#split").html();
   var x = s.split(": ");
