full dxspiders (except accurate exception handling) built and integrated.  Next step is extensive use and testing

--- a/ui/html/vfo.page.html
+++ b/ui/html/vfo.page.html
@@ -21,7 +21,7 @@
   </div>
   <div class="col-sm-1"></div>
   <div class="col-sm-3">
-    <h2 id='mode'>Mode: {{.Mode}}</h2>
+    <h2 id="mode">Mode: {{.Mode}}</h2>
   </div>
   <div class="col-sm-3"></div>
 </div>
