--- a/ui/html/runkt.page.html
+++ b/ui/html/runkt.page.html
@@ -10,9 +10,8 @@
 
 <p>You are running at:</p>
 <p>Sending speed of {{.Speed}} WPM</p>
-<p>With Farnsworth charachter speed of {{.FarnSpeed}} WPM</p>
-<p>Letter spacing is {{.Lsm}} times 3 dots</p>
-<p>Word spacing is {{.Wsm}} times 7 dots</p>
+<p>With tone of {{.Tone}} Hz</p>
+<p>Volume of {{.Volume}} out of 10</p>
 <p>And your operating mode is {{.Mode}}</p>
 <br><br>
 <a style="background-color: #9FE1EA; color: #442C2E" class="btn" href="/stop" role="button">Stop</a>
