--- a/ui/html/analysis.page.html
+++ b/ui/html/analysis.page.html
@@ -20,7 +20,10 @@
   <li><a style="color: #442C2E" href="/state-confirmed">Confirmed State: {{.ConfirmedState}}</a></li>
   <li><a style="color: #442C2E" href="/county">County: {{.County}}</a></li>
   <li><a style="color: #442C2E" href="/county-confirmed">Confirmed County: {{.ConfirmedCounty}}</a></li>
-
+  <li><a style="color: #442C2E" href="/cw-contacts">CW Contacts: {{.CWContacts}}</a></li>
+  <li><a style="color: #442C2E" href="/cw-confirmed">CW Confirmed Contact: {{.ConfirmedCW}}</a></li>
+  <li><a style="color: #442C2E" href="/cw-confirmed-state">CW Confirmed State: {{.ConfirmedCWState}}</a></li>
+  <li><a style="color: #442C2E" href="/cw-confirmed-country">CW Confirmed Country: {{.ConfirmedCWCountry}}</a></li>
 </ul>
 {{end}}
 
